switch sources back to djay funnelweb

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,8 @@
 [buildout]
 parts = 
         sphinx 
-        toplone 
+        toplone
+        funnelweb
 
 extends =
         http://dist.plone.org/release/4.0.1/versions.cfg
@@ -20,31 +21,30 @@ sources = sources
 sources-dir = ${buildout:directory}/src
 auto-checkout =
 allow-picked-versions = true
-# Set transmogrify package repository pointer here to allow easy switching between private and public repos
-# Final repo URLs are format git://github.com/djay/transmogrify.htmltesting.git
-[transmogrify]
-git-repo = git://github.com/djay
+
 
 [sources]
-#transmogrify.webcrawler = git ${transmogrify:git-repo}/transmogrify.webcrawler.git
-transmogrify.webcrawler = git git://github.com/miohtama/transmogrify.webcrawler.git
+transmogrify.webcrawler = git git://github.com/djay/transmogrify.webcrawler.git
+#transmogrify.webcrawler = git git://github.com/miohtama/transmogrify.webcrawler.git
 
-transmogrify.pathsorter = git ${transmogrify:git-repo}/transmogrify.pathsorter.git
-transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
+transmogrify.pathsorter = git git://github.com/djay/transmogrify.pathsorter.git
+transmogrify.htmltesting = git git://github.com/djay/transmogrify.htmltesting.git
 
-#transmogrify.siteanalyser = git ${transmogrify:git-repo}/transmogrify.siteanalyser.git
-transmogrify.siteanalyser = git git://github.com/miohtama/transmogrify.siteanalyser.git 
+transmogrify.siteanalyser = git git://github.com/djay/transmogrify.siteanalyser.git
+#transmogrify.siteanalyser = git git://github.com/miohtama/transmogrify.siteanalyser.git 
 
-# transmogrify.htmltesting = git ${transmogrify:git-repo}/transmogrify.htmltesting.git
-transmogrify.htmltesting = git git://github.com/miohtama/transmogrify.htmltesting.git
+transmogrify.htmltesting = git git://github.com/djay/transmogrify.htmltesting.git
+#transmogrify.htmltesting = git git://github.com/miohtama/transmogrify.htmltesting.git
 
 # Following have been patched
 
-#transmogrify.ploneremote = git ${transmogrify:git-repo}/transmogrify.ploneremote.git
-transmogrify.ploneremote =  git git://github.com/miohtama/transmogrify.ploneremote.git
+transmogrify.ploneremote = git git://github.com/djay/transmogrify.ploneremote.git
+#transmogrify.ploneremote =  git git://github.com/miohtama/transmogrify.ploneremote.git
 
-#transmogrify.htmlcontentextractor = git ${transmogrify:git-repo}/transmogrify.htmlcontentextractor.git
-transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
+transmogrify.htmlcontentextractor = git git://github.com/djay/transmogrify.htmlcontentextractor.git
+#transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
+
+funnelweb = git git://github.com/djay/funnelweb.git
 
 
 [sphinx]
@@ -89,16 +89,40 @@ initialization =
   import logging, os
   
   logging.basicConfig(level=logging.DEBUG)
+  target=len(argv) > 1 and argv[1] or ''
   args = dict(webcrawler=dict(site_url='file://'+os.getcwd()+'/build/html/'),
       localconstructor=dict(output=url('ploneout')),
-      ploneuploader=dict(target=argv[1]),
-      schemaupdater=dict(target=argv[1]),
-      publish=dict(target=argv[1]),
-      excludefromnavigation=dict(target=argv[1]),
-      cleanremotefolder=dict(target=argv[1])
+      ploneuploader=dict(target=target),
       )
 arguments = 'pipeline.cfg', args
 entry-points = toplone=transmogrify.htmltesting.runner:runner
+
+# in testing
+[funnelweb]
+recipe = funnelweb
+crawler-url=file://${buildout:directory}/build/html
+crawler-ignore=
+	cgi-bin
+	javascript:
+	_static
+	_sources
+	genindex\.html
+	search\.html
+	saesrchindex\.js
+
+# Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
+# them out from body so that they do not corrupt "text" field
+
+template1-title = text //div[@class='body']//h1[1]
+template1-_permalink = text //div[@class='body']//a[@class='headerlink']
+template1-text = html //div[@class='body']
+template1-description = optional //div[contains(@class,'admonition-description')]//p[@class='last']
+                     //div[contains(@class,'admonition-description')]
+
+changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':HelpCenterLeafPage}.get(item['_type'],item['_type'])
+
+localupload-output=${buildout:directory}/ploneout
+
 
 [test]
 recipe = zc.recipe.testrunner
