--- a/buildout.cfg
+++ b/buildout.cfg
@@ -109,6 +109,7 @@ crawler-ignore=
 	genindex\.html
 	search\.html
 	saesrchindex\.js
+cache-output =
 
 # Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
 # them out from body so that they do not corrupt "text" field
@@ -118,10 +119,18 @@ template1-_permalink = text //div[@class='body']//a[@class='headerlink']
 template1-text = html //div[@class='body']
 template1-description = optional //div[contains(@class,'admonition-description')]//p[@class='last']
                      //div[contains(@class,'admonition-description')]
+templateauto-condition = python:False
 
-changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':HelpCenterLeafPage}.get(item['_type'],item['_type'])
+attachmentguess-condition = python: subitem.get('_type') in ['Image']
+attachmentguess-defaultpage = index
+
+changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':'HelpCenterLeafPage'}.get(item['_type'],item['_type'])
 
 localupload-output=${buildout:directory}/ploneout
+
+# All folderish content should be checked if they contain
+# any items on the remote site which are not presented locally. including base folder
+ploneprune-condition=python:item.get('_type') in ['HelpCenterReferenceManualSection','HelpCenterReferenceManual'] or item['_path'] == ''
 
 
 [test]
