ensure index is used as default page in pipeline

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -14,8 +14,8 @@ pipeline =
     treeserializer
     encode-all
     mark-image-folders-to-navigation-exclusion
-    mark-container-remote-content-type
-    mark-page-remote-content-type
+#    mark-container-remote-content-type
+#    mark-page-remote-content-type
     mark-remote-folder-to-be-cleaned
     mark-remote-root-to-be-cleaned
     topublish
@@ -51,6 +51,10 @@ condition: python:not ("genindex" in item.get("_path","") or "search.html" in it
 
 [treeserializer]
 blueprint = transmogrify.pathsorter
+default_pages = index.html
+    index
+#default_containers = Folder
+
 
 [typerecognitor]
 blueprint = transmogrify.webcrawler.typerecognitor
