put PHC types back into pipeline

--- a/pipeline.cfg
+++ b/pipeline.cfg
@@ -14,8 +14,8 @@ pipeline =
     treeserializer
     encode-all
     mark-image-folders-to-navigation-exclusion
-#    mark-container-remote-content-type
-#    mark-page-remote-content-type
+    mark-container-remote-content-type
+    mark-page-remote-content-type
     mark-remote-folder-to-be-cleaned
     mark-remote-root-to-be-cleaned
     topublish
