fix funnelweb description xpath and switch to xpath recipe

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,7 +5,6 @@
 parts = 
         sphinx 
         toplone
-        funnelweb
 
 extends =
         http://dist.plone.org/release/4.0.1/versions.cfg
@@ -71,34 +70,42 @@ eggs =
 # Also Python logger is initialized to give us verbose
 # output. Some blueprints use logging module for the output.
 #
-[toplone]
-recipe = zc.recipe.egg
-eggs =
-  transmogrify.htmltesting
-  transmogrify.webcrawler
-  transmogrify.siteanalyser
-  transmogrify.htmlcontentextractor
-  transmogrify.pathsorter
-  transmogrify.ploneremote
-  
-# This initialization script sets remote site argument
-# for remote blueprints defined in pipeline.cfg
-initialization =
-  from urllib import pathname2url as url
-  from sys import argv
-  import logging, os
-  
-  logging.basicConfig(level=logging.DEBUG)
-  target=len(argv) > 1 and argv[1] or ''
-  args = dict(webcrawler=dict(site_url='file://'+os.getcwd()+'/build/html/'),
-      localconstructor=dict(output=url('ploneout')),
-      ploneuploader=dict(target=target),
-      )
-arguments = 'pipeline.cfg', args
-entry-points = toplone=transmogrify.htmltesting.runner:runner
+#[toplone]
+#recipe = zc.recipe.egg
+#eggs =
+#  transmogrify.htmltesting
+#  transmogrify.webcrawler
+#  transmogrify.siteanalyser
+#  transmogrify.htmlcontentextractor
+#  transmogrify.pathsorter
+#  transmogrify.ploneremote
+#  
+## This initialization script sets remote site argument
+## for remote blueprints defined in pipeline.cfg
+#initialization =
+#  from urllib import pathname2url as url
+#  from sys import argv
+#  import logging, os
+#  
+#  logging.basicConfig(level=logging.DEBUG)
+#  target=len(argv) > 1 and argv[1] or ''
+#  args = dict(webcrawler=dict(site_url='file://'+os.getcwd()+'/build/html/'),
+#      localconstructor=dict(output=url('ploneout')),
+#      ploneuploader=dict(target=target),
+#      )
+#arguments = 'pipeline.cfg', args
+#entry-points = toplone=transmogrify.htmltesting.runner:runner
 
-# in testing
-[funnelweb]
+#
+# Recipe to create toplone command.
+# 
+# Using the funnelweb blueprint to create a script
+# to convert and upload the manual as plone content
+# bin/toplone --ploneupload=http://admin:admin@plone.org/documentation/manual/plone-community-developer-documentation
+# use --template1:debug to get extra detail on fields extracted from pages.
+# see http://plone.org/products/funnelweb
+#
+[toplone]
 recipe = funnelweb
 crawler-url=file://${buildout:directory}/build/html
 crawler-ignore=
@@ -117,12 +124,12 @@ cache-output =
 template1-title = text //div[@class='body']//h1[1]
 template1-_permalink = text //div[@class='body']//a[@class='headerlink']
 template1-text = html //div[@class='body']
-template1-description = optional //div[contains(@class,'admonition-description')]//p[@class='last']
-                     //div[contains(@class,'admonition-description')]
+template1-_label = optional //p[contains(@class,'admonition-title')]
+template1-description = optional //div[contains(@class,'admonition-description')]/p[@class='last']
 templateauto-condition = python:False
 
-attachmentguess-condition = python: subitem.get('_type') in ['Image']
-attachmentguess-defaultpage = index
+#attachmentguess-condition = python: subitem.get('_type') in ['Image']
+#attachmentguess-defaultpage = index
 
 changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':'HelpCenterLeafPage'}.get(item['_type'],item['_type'])
 
