toplone: fix titles on folders

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -130,6 +130,8 @@ templateauto-condition = python:False
 
 #attachmentguess-condition = python: subitem.get('_type') in ['Image']
 #attachmentguess-defaultpage = index
+titleguess-condition = python:True
+indexguess-condition = python:True
 
 changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':'HelpCenterLeafPage'}.get(item['_type'],item['_type'])
 
