include hideguess to remove image folder

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -120,6 +120,7 @@ cache-output =
 
 # Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
 # them out from body so that they do not corrupt "text" field
+# We do the same for the "Description:" label
 
 template1-title = text //div[@class='body']//h1[1]
 template1-_permalink = text //div[@class='body']//a[@class='headerlink']
@@ -132,6 +133,7 @@ templateauto-condition = python:False
 #attachmentguess-defaultpage = index
 titleguess-condition = python:True
 indexguess-condition = python:True
+hideguess-condition = python:item.get("_path","").startswith('_images') and item.get('_type')=='Folder'
 
 changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':'HelpCenterLeafPage'}.get(item['_type'],item['_type'])
 
