toplone: fix description and strip index and search links

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -103,6 +103,7 @@ eggs =
 # to convert and upload the manual as plone content
 # bin/toplone --ploneupload=http://admin:admin@plone.org/documentation/manual/plone-community-developer-documentation
 # use --template1:debug to get extra detail on fields extracted from pages.
+# use --changetype:value="python:item['_type']" if you want to test on plone site without PHC
 # see http://plone.org/products/funnelweb
 #
 [toplone]
@@ -126,7 +127,8 @@ template1-title = text //div[@class='body']//h1[1]
 template1-_permalink = text //div[@class='body']//a[@class='headerlink']
 template1-text = html //div[@class='body']
 template1-_label = optional //p[contains(@class,'admonition-title')]
-template1-description = optional //div[contains(@class,'admonition-description')]/p[@class='last']
+template1-description = optional //div[contains(@class,'admonition-description')]/p[@class='last']/text()
+template1-_remove_useless_links = optional //div[@id = 'indices-and-tables']
 templateauto-condition = python:False
 
 #attachmentguess-condition = python: subitem.get('_type') in ['Image']
