extra comments in buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -117,12 +117,10 @@ crawler-ignore=
 	genindex\.html
 	search\.html
 	saesrchindex\.js
+# Since content is from disk, no need for local cache
 cache-output =
 
-# Permalinks are Sphinx's on-hover makers that are not used in Plone. We have this dummy rule here to parse 
-# them out from body so that they do not corrupt "text" field
-# We do the same for the "Description:" label
-
+# Fields with '_' won't be uploaded to Plone so will be effectively removed 
 template1-title = text //div[@class='body']//h1[1]
 template1-_permalink = text //div[@class='body']//a[@class='headerlink']
 template1-text = html //div[@class='body']
@@ -133,12 +131,18 @@ templateauto-condition = python:False
 
 #attachmentguess-condition = python: subitem.get('_type') in ['Image']
 #attachmentguess-defaultpage = index
+
+# Images will get titles from backlink text
 titleguess-condition = python:True
 indexguess-condition = python:True
+
+# Hide the images folder from navigation
 hideguess-condition = python:item.get("_path","").startswith('_images') and item.get('_type')=='Folder'
 
+# Upload as PHC instead of Folders and Pages 
 changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':'HelpCenterLeafPage'}.get(item['_type'],item['_type'])
 
+# Save locally for debugging purposes
 localupload-output=${buildout:directory}/ploneout
 
 # All folderish content should be checked if they contain
