disable localcreator in buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -143,7 +143,8 @@ hideguess-condition = python:item.get("_path","").startswith('_images') and item
 changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':'HelpCenterLeafPage'}.get(item['_type'],item['_type'])
 
 # Save locally for debugging purposes
-localupload-output=${buildout:directory}/ploneout
+# WARNING: not currently working
+#localupload-output=${buildout:directory}/ploneout
 
 # All folderish content should be checked if they contain
 # any items on the remote site which are not presented locally. including base folder
