chance the url of funnelweb git project on github.com

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -43,7 +43,7 @@ transmogrify.ploneremote = git git://github.com/djay/transmogrify.ploneremote.gi
 transmogrify.htmlcontentextractor = git git://github.com/djay/transmogrify.htmlcontentextractor.git
 #transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
 
-funnelweb = git git://github.com/djay/funnelweb.git
+funnelweb = git git://github.com/collective/funnelweb.git
 
 
 [sphinx]
