initial genericsetup reference

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,9 @@
 parts = 
         sphinx 
         toplone
+extends =
+    http://dist.plone.org/release/4.1-latest/versions.cfg
+    sources.cfg
 
 extensions =
   mr.developer
@@ -13,7 +16,16 @@ extensions =
 dump-picked-versions-file = picked.cfg
 sources = sources
 sources-dir = ${buildout:directory}/src
+
+#These are packages that contain documentation in them
 auto-checkout =
+  plone.app.portlets
+  plone.app.viewletmanager
+  Products.ResourceRegistries
+  Products.GenericSetup
+  Products.DCWorkflow
+  plone.app.contentrules
+
 allow-picked-versions = true
 
 
@@ -39,6 +51,8 @@ transmogrify.htmlcontentextractor = git git://github.com/djay/transmogrify.htmlc
 #transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
 
 funnelweb = git git://github.com/collective/funnelweb.git
+mr.migrator = git git@github.com:collective/mr.migrator.git
+
 
 
 [sphinx]
@@ -52,6 +66,9 @@ eggs =
   Docutils
   roman
   Pygments
+  Plone
+  collective.sphinx.includedoc
+  collective.sphinx.autoatschema
 
 
 #
@@ -159,10 +176,9 @@ egg = lxml
 
 [versions]
 roadrunner = 0.2.3.1
-z3c.form = 1.9.0
 zc.recipe.egg=1.2.0
 plone.reload = 1.0
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.0.4
-Docutils = 0.6
+Docutils = 0.7
 
