--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,6 +25,7 @@ auto-checkout =
   Products.GenericSetup
   Products.DCWorkflow
   plone.app.contentrules
+  plone.app.workflow
 
 allow-picked-versions = true
 
