--- a/buildout.cfg
+++ b/buildout.cfg
@@ -180,6 +180,6 @@ roadrunner = 0.2.3.1
 zc.recipe.egg=1.2.0
 plone.reload = 1.0
 collective.recipe.sphinxbuilder = 0.7.0
-Sphinx = 1.0.4
-Docutils = 0.7
+Sphinx = 1.1.2
+docutils = 0.8.1
 
