Added required packages for the autodoc module

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,11 +21,13 @@ sources-dir = ${buildout:directory}/src
 auto-checkout =
   plone.app.portlets
   plone.app.viewletmanager
+  plone.app.contentrules
   Products.ResourceRegistries
   Products.GenericSetup
   Products.DCWorkflow
   plone.app.contentrules
   plone.app.workflow
+  Products.CMFEditions
 
 allow-picked-versions = true
 
