actually plone.app.locales has not been moved yet

--- a/sources.cfg
+++ b/sources.cfg
@@ -59,7 +59,7 @@ plone.app.jquerytools               = git https://github.com/plone/plone.app.jqu
 plone.app.kss                       = git https://github.com/plone/plone.app.kss.git
 plone.app.layout                    = git https://github.com/plone/plone.app.layout.git
 plone.app.linkintegrity             = git https://github.com/plone/plone.app.linkintegrity.git
-plone.app.locales                   = git https://github.com/plone/plone.app.locales.git
+plone.app.locales                   = svn https://svn.plone.org/svn/plone/plone.app.locales/trunk/
 plone.app.openid                    = git https://github.com/plone/plone.app.openid.git
 plone.app.portlets                  = git https://github.com/plone/plone.app.portlets.git
 plone.app.redirector                = git https://github.com/plone/plone.app.redirector.git
