Removed toplone as unsupported scenario
Fixed parts

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,13 @@
 #
-# Buildout to create toplone command which uploads Sphinx documentation to Plone site
+# Buildout to set-up Sphinx and checkout Plone source code for the inclusion of source code documentation.
+#
+# To get *all* of trunk Plone: bin/develop co ""
 #
 [buildout]
 parts = 
         sphinx 
-        toplone
+        
+
 extends =
     http://dist.plone.org/release/4.1-latest/versions.cfg
     sources.cfg
@@ -31,33 +34,6 @@ auto-checkout =
 
 allow-picked-versions = true
 
-
-[sources]
-transmogrify.webcrawler = git git://github.com/djay/transmogrify.webcrawler.git
-#transmogrify.webcrawler = git git://github.com/miohtama/transmogrify.webcrawler.git
-
-transmogrify.pathsorter = git git://github.com/djay/transmogrify.pathsorter.git
-transmogrify.htmltesting = git git://github.com/djay/transmogrify.htmltesting.git
-
-transmogrify.siteanalyser = git git://github.com/djay/transmogrify.siteanalyser.git
-#transmogrify.siteanalyser = git git://github.com/miohtama/transmogrify.siteanalyser.git 
-
-transmogrify.htmltesting = git git://github.com/djay/transmogrify.htmltesting.git
-#transmogrify.htmltesting = git git://github.com/miohtama/transmogrify.htmltesting.git
-
-# Following have been patched
-
-transmogrify.ploneremote = git git://github.com/djay/transmogrify.ploneremote.git
-#transmogrify.ploneremote =  git git://github.com/miohtama/transmogrify.ploneremote.git
-
-transmogrify.htmlcontentextractor = git git://github.com/djay/transmogrify.htmlcontentextractor.git
-#transmogrify.htmlcontentextractor = git git://github.com/miohtama/transmogrify.htmlcontentextractor.git
-
-funnelweb = git git://github.com/collective/funnelweb.git
-mr.migrator = git git@github.com:collective/mr.migrator.git
-
-
-
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
 #doc-directory = .
@@ -74,113 +50,11 @@ eggs =
   collective.sphinx.autoatschema
 
 
-#
-# Recipe to create toplone command.
-# 
-# It will walk through all blueprints defined
-# in pipeline.cfg and override their target parameter
-# to be a remote Plone site given on the command line.
-# This all happeins in initialization= magic.
-#
-# Also Python logger is initialized to give us verbose
-# output. Some blueprints use logging module for the output.
-#
-#[toplone]
-#recipe = zc.recipe.egg
-#eggs =
-#  transmogrify.htmltesting
-#  transmogrify.webcrawler
-#  transmogrify.siteanalyser
-#  transmogrify.htmlcontentextractor
-#  transmogrify.pathsorter
-#  transmogrify.ploneremote
-#  
-## This initialization script sets remote site argument
-## for remote blueprints defined in pipeline.cfg
-#initialization =
-#  from urllib import pathname2url as url
-#  from sys import argv
-#  import logging, os
-#  
-#  logging.basicConfig(level=logging.DEBUG)
-#  target=len(argv) > 1 and argv[1] or ''
-#  args = dict(webcrawler=dict(site_url='file://'+os.getcwd()+'/build/html/'),
-#      localconstructor=dict(output=url('ploneout')),
-#      ploneuploader=dict(target=target),
-#      )
-#arguments = 'pipeline.cfg', args
-#entry-points = toplone=transmogrify.htmltesting.runner:runner
-
-#
-# Recipe to create toplone command.
-# 
-# Using the funnelweb blueprint to create a script
-# to convert and upload the manual as plone content
-# bin/toplone --ploneupload=http://admin:admin@plone.org/documentation/manual/plone-community-developer-documentation
-# use --template1:debug to get extra detail on fields extracted from pages.
-# use --changetype:value="python:item['_type']" if you want to test on plone site without PHC
-# see http://plone.org/products/funnelweb
-#
-[toplone]
-recipe = funnelweb
-crawler-url=file://${buildout:directory}/build/html
-crawler-ignore=
-	cgi-bin
-	javascript:
-	_static
-	_sources
-	genindex\.html
-	search\.html
-	saesrchindex\.js
-# Since content is from disk, no need for local cache
-cache-output =
-
-# Fields with '_' won't be uploaded to Plone so will be effectively removed 
-template1-title = text //div[@class='body']//h1[1]
-template1-_permalink = text //div[@class='body']//a[@class='headerlink']
-template1-text = html //div[@class='body']
-template1-_label = optional //p[contains(@class,'admonition-title')]
-template1-description = optional //div[contains(@class,'admonition-description')]/p[@class='last']/text()
-template1-_remove_useless_links = optional //div[@id = 'indices-and-tables']
-templateauto-condition = python:False
-
-#attachmentguess-condition = python: subitem.get('_type') in ['Image']
-#attachmentguess-defaultpage = index
-
-# Images will get titles from backlink text
-titleguess-condition = python:True
-indexguess-condition = python:True
-
-# Hide the images folder from navigation
-hideguess-condition = python:item.get("_path","").startswith('_images') and item.get('_type')=='Folder'
-
-# Upload as PHC instead of Folders and Pages 
-changetype-value=python:{'Folder':'HelpCenterReferenceManualSection','Document':'HelpCenterLeafPage'}.get(item['_type'],item['_type'])
-
-# Save locally for debugging purposes
-# WARNING: not currently working
-#localupload-output=${buildout:directory}/ploneout
-
-# All folderish content should be checked if they contain
-# any items on the remote site which are not presented locally. including base folder
-ploneprune-condition=python:item.get('_type') in ['HelpCenterReferenceManualSection','HelpCenterReferenceManual'] or item['_path'] == ''
-
-
-[test]
-recipe = zc.recipe.testrunner
-eggs =
-  ${toplone:eggs}
-  transmogrify.htmltesting
-
-[lxml]
-recipe = z3c.recipe.staticlxml
-egg = lxml
-
-
 [versions]
 roadrunner = 0.2.3.1
 zc.recipe.egg=1.2.0
-plone.reload = 1.0
+
+# Some pindowns to make sure Sphinx + dependencies don't go havoc
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.2
 docutils = 0.8.1
