--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,12 @@
 #
-# Buildout to set-up Sphinx and checkout Plone source code for the inclusion of source code documentation.
+# Buildout to set-up Sphinx and checkout Plone source code for the inclusion
+# of source code documentation.
 #
 # To get *all* of trunk Plone: bin/develop co ""
 #
 [buildout]
 parts = 
         sphinx 
-        
 
 extends =
     http://dist.plone.org/release/4.1-latest/versions.cfg
