--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,14 @@
 parts =
     sphinx
 
+allow-hosts =
+    *.plone.org
+    *.python.org
+    *.zope.org
+    docutils.sourceforge.net
+    effbot.org
+    prdownloads.sourceforge.net
+
 extends =
     http://dist.plone.org/release/4.1-latest/versions.cfg
     sources.cfg
