Changed forms title to zope.formlib

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -39,6 +39,7 @@ auto-checkout =
   plone.app.contentrules
   plone.app.workflow
   Products.CMFEditions
+  plone.app.testing
 
 allow-picked-versions = true
 
