Working to get pip requirements.txt to get RTD.org shit running

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ dist
 *~
 *.bak
 .coverage
-*.pyd 
+*.pyd
 *.so
 *.orig
 *.rej
@@ -47,19 +47,7 @@ docs/apidocs/*
 *.debug.css
 *.db
 files
-
-echo-nest-remix
-
-daddy.*
-megaman2.*
-celine.*
-
-*.jar
-jsduck
-watchdog
-
-yuicompressor-*
-
 bin
 picked.cfg
 src
+pip.log
