--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,8 @@
 [buildout]
 parts =
     sphinx
+    pip
+    requirements
 
 allow-hosts =
     *.plone.org
@@ -16,10 +18,6 @@ allow-hosts =
     effbot.org
     prdownloads.sourceforge.net
 
-extends =
-    http://dist.plone.org/release/4.1-latest/versions.cfg
-    sources.cfg
-
 extensions =
   mr.developer
   buildout.dumppickedversions
@@ -27,19 +25,6 @@ extensions =
 dump-picked-versions-file = picked.cfg
 sources = sources
 sources-dir = ${buildout:directory}/src
-
-#These are packages that contain documentation in them
-auto-checkout =
-  plone.app.portlets
-  plone.app.viewletmanager
-  plone.app.contentrules
-  Products.ResourceRegistries
-  Products.GenericSetup
-  Products.DCWorkflow
-  plone.app.contentrules
-  plone.app.workflow
-  Products.CMFEditions
-  plone.app.testing
 
 allow-picked-versions = true
 
@@ -67,3 +52,15 @@ zc.recipe.egg = 1.2.0
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.3
 docutils = 0.9.1
+
+[pip]
+recipe = zc.recipe.egg
+eggs = pip
+
+[requirements]
+recipe = plone.recipe.command
+stop-on-error = true
+command = bin/pip --log=pip.log install --no-deps  --no-install -r requirements.txt -t eggs --src src
+
+
+
