Added the first external manual

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,7 +30,6 @@ allow-picked-versions = true
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
-#doc-directory = .
 outputs = html
 source = ${buildout:directory}/source
 build = ${buildout:directory}/build
@@ -39,7 +38,6 @@ eggs =
   Docutils
   roman
   Pygments
-  Plone
   collective.sphinx.includedoc
   collective.sphinx.autoatschema
 
@@ -59,7 +57,7 @@ eggs = pip
 
 [requirements]
 recipe = plone.recipe.command
-stop-on-error = true
+stop-on-error = false
 command = bin/pip --log=pip.log install --no-deps  --no-install -r requirements.txt -t eggs --src src
 
 
