--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 #Products.DCWorkflow
 -e git+https://github.com/plone/plone.app.portlets.git#egg=plone.app.portlets
 -e git+https://github.com/plone/plone.app.viewletmanager.git#egg=plone.app.viewletmanager
--e git+https://github.com/plone/plone.contentrules.git#egg=plone.contentrules.git
+-e git+https://github.com/plone/plone.contentrules.git#egg=plone.contentrules
 -e git+https://github.com/plone/Products.ResourceRegistries.git#egg=Products.ResourceRegistries
 -e svn+http://svn.zope.org/repos/main/Products.GenericSetup/trunk#egg=Products.GenericSetup
--e git+https://github.com/plone/plone.app.workflow#egg=hplone.app.workflow
+-e git+https://github.com/plone/plone.app.workflow#egg=plone.app.workflow
 -e git+https://github.com/plone/Products.CMFEditions#egg=Products.CMFEditions
 -e git+https://github.com/plone/plone.app.testing#egg=plone.app.testing
+-e git+git://github.com/plone/plone.api.git#egg=plone.api
