Added TinyMCE external manual

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@
 -e git+https://github.com/plone/Products.CMFEditions#egg=Products.CMFEditions
 -e git+https://github.com/plone/plone.app.testing#egg=plone.app.testing
 -e git+git://github.com/plone/plone.api.git#egg=plone.api
+-e git+git://github.com/plone/Products.TinyMCE#egg=Products.TinyMCE
