Moving back from pip+requirements.txt as it won't go work on rtd.org in any case due to Plone eggs dependencies

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,8 +7,6 @@
 [buildout]
 parts =
     sphinx
-    pip
-    requirements
 
 allow-hosts =
     *.plone.org
@@ -22,11 +20,32 @@ extensions =
   mr.developer
   buildout.dumppickedversions
 
+extends =
+    https://raw.github.com/plone/buildout.coredev/4.2/sources.cfg
+
 dump-picked-versions-file = picked.cfg
 sources = sources
 sources-dir = ${buildout:directory}/src
 
 allow-picked-versions = true
+
+# These are packages that contain documentation in them
+auto-checkout =
+    plone.app.portlets
+    plone.app.viewletmanager
+    plone.app.contentrules
+    Products.ResourceRegistries
+    Products.GenericSetup
+    Products.DCWorkflow
+    plone.app.contentrules
+    plone.app.workflow
+    Products.CMFEditions
+    plone.app.testing
+    plone.api
+    Products.TinyMCE
+
+allow-picked-versions = true
+
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
@@ -34,6 +53,7 @@ outputs = html
 source = ${buildout:directory}/source
 build = ${buildout:directory}/build
 eggs =
+  Plone
   Sphinx
   Docutils
   roman
@@ -49,16 +69,8 @@ zc.recipe.egg = 1.2.0
 # Some pindowns to make sure Sphinx + dependencies don't go havoc
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.3
-docutils = 0.9.1
 
-[pip]
-recipe = zc.recipe.egg
-eggs = pip
-
-[requirements]
-recipe = plone.recipe.command
-stop-on-error = false
-command = bin/pip --log=pip.log install --no-deps  --no-install -r requirements.txt -t eggs --src src
-
-
+[sources]
+Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
+plone.api = git git://github.com/plone/plone.api.gi
 
