Making buildout to use unified installer for Travis CI integration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,8 @@
 #
 [buildout]
 parts =
+    download
+    install
     sphinx
 
 allow-hosts =
@@ -43,9 +45,18 @@ auto-checkout =
     plone.app.testing
     plone.api
     Products.TinyMCE
+    tutorial.todoapp
 
 allow-picked-versions = true
 
+[download]
+recipe = hexagonit.recipe.download
+url = https://launchpad.net/plone/4.2/4.2.1/+download/Plone-4.2.1-UnifiedInstaller.tgz
+
+[install]
+recipe = collective.recipe.cmd
+on_install = true
+cmds = tar jxvf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
@@ -73,4 +84,4 @@ Sphinx = 1.1.3
 [sources]
 Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
 plone.api = git git://github.com/plone/plone.api.gi
-
+tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
