--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,6 +22,9 @@ extensions =
   mr.developer
   buildout.dumppickedversions
 
+eggs-directory = buildout-cache/eggs
+download-cache = buildout-cache/downloads
+
 extends =
     https://raw.github.com/plone/buildout.coredev/4.2/sources.cfg
 
@@ -45,7 +48,7 @@ auto-checkout =
     plone.app.testing
     plone.api
     Products.TinyMCE
-    tutorial.todoapp
+    tutorials.todoapp
 
 allow-picked-versions = true
 
@@ -64,7 +67,6 @@ outputs = html
 source = ${buildout:directory}/source
 build = ${buildout:directory}/build
 eggs =
-  Plone
   Sphinx
   Docutils
   roman
@@ -76,6 +78,7 @@ eggs =
 [versions]
 roadrunner = 0.2.3.1
 zc.recipe.egg = 1.2.0
+Products.CMFPlone = 4.2.1
 
 # Some pindowns to make sure Sphinx + dependencies don't go havoc
 collective.recipe.sphinxbuilder = 0.7.0
@@ -83,5 +86,7 @@ Sphinx = 1.1.3
 
 [sources]
 Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
-plone.api = git git://github.com/plone/plone.api.gi
+plone.api = git git://github.com/plone/plone.api.git
 tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
+
+
