Fixes directory case sensititvity issues

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -59,7 +59,7 @@ url = https://launchpad.net/plone/4.2/4.2.1/+download/Plone-4.2.1-UnifiedInstall
 [install]
 recipe = collective.recipe.cmd
 on_install = true
-cmds = tar jxvf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
+cmds = tar jxf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
