Added final crontab scheduler

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -9,9 +9,9 @@ extends =
 parts +=
     crontab
 
-# Run the github poller now and then
+# Run the github poller every 5 minutes
 [crontab]
 recipe = z3c.recipe.usercrontab
-times = @reboot
+times = */5 * * * *
 command = cd ${buildout:directory} && ./doc-holliday.sh
 
