Added plone.org manual. Added moved documentation page

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -89,5 +89,6 @@ Sphinx = 1.1.3
 Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
 plone.api = git git://github.com/plone/plone.api.git
 tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
+ploneorg.admin = git git@github.com:plone/ploneorg.admin.git egg=false
 
 
