--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -3,9 +3,9 @@
 #
 # This file is normally included from the Apache HTTPD setup.
 
-DocumentRoot /var/www/planet.plone.org/var/public_html
+DocumentRoot /var/www/developer.plone.org/var/public_html
 ServerAdmin admins@plone.org
-<Directory /var/www/planet.plone.org/var/public_html>
+<Directory /var/www/developer.plone.org/var/public_html>
     Order Allow,Deny
     Allow from all
 </Directory>
