--- a/deployment.cfg
+++ b/deployment.cfg
@@ -13,5 +13,5 @@ parts +=
 [crontab]
 recipe = z3c.recipe.usercrontab
 times = */5 * * * *
-command = cd ${buildout:directory} && ./doc-holliday.sh
+command = cd ${buildout:directory} && sudo -u apache ./doc-holliday.sh
 
