--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,6 +26,7 @@ eggs-directory = buildout-cache/eggs
 download-cache = buildout-cache/downloads
 
 extends =
+    http://dist.plone.org/release/4.2.1/versions.cfg
     https://raw.github.com/plone/buildout.coredev/4.2/sources.cfg
 
 dump-picked-versions-file = picked.cfg
@@ -62,28 +63,33 @@ recipe = collective.recipe.cmd
 on_install = true
 cmds = tar jxf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
 
+#
+# We need to list all packages here which are referred by Sphinx's autodoc directive,
+# as autodoc  uses run-time import to scrape the text from source code files
+#
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
 outputs = html
 source = ${buildout:directory}/source
 build = ${buildout:directory}/build
 eggs =
-  Sphinx
-  Docutils
-  roman
-  Pygments
-  collective.sphinx.includedoc
-  collective.sphinx.autoatschema
-
+    Sphinx
+    Docutils
+    roman
+    Pygments
+    collective.sphinx.includedoc
+    collective.sphinx.autoatschema
+    Products.CMFPlone
+    plone.api
 
 [versions]
 roadrunner = 0.2.3.1
 zc.recipe.egg = 1.2.0
-Products.CMFPlone = 4.2.1
 
 # Some pindowns to make sure Sphinx + dependencies don't go havoc
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.3
+docutils = 0.9.1
 
 [sources]
 Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
