Fix comment in httpd.conf

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,4 +1,4 @@
-# ♀ Planet Venus for Plone — Apache HTTPD Configuration
+# developer.plone.org — Apache HTTPD Configuration
 # =====================================================
 #
 # This file is normally included from the Apache HTTPD setup.
