--- a/buildout.cfg
+++ b/buildout.cfg
@@ -50,6 +50,7 @@ auto-checkout =
     plone.api
     Products.TinyMCE
     tutorials.todoapp
+    ploneorg.admin
 
 allow-picked-versions = true
 
@@ -91,10 +92,11 @@ collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.3
 docutils = 0.9.1
 
+# Make sure you use public Github URL here!
 [sources]
 Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
 plone.api = git git://github.com/plone/plone.api.git
 tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
-ploneorg.admin = git git@github.com:plone/ploneorg.admin.git egg=false
+ploneorg.admin = git git://github.com/plone/ploneorg.admin.git egg=false
 
 
