Removed Plone unified installer optimization step

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,8 +6,6 @@
 #
 [buildout]
 parts =
-    download
-    install
     sphinx
 
 allow-hosts =
@@ -54,15 +52,16 @@ auto-checkout =
 
 allow-picked-versions = true
 
-[download]
-recipe = hexagonit.recipe.download
-url = https://launchpad.net/plone/4.2/4.2.1/+download/Plone-4.2.1-UnifiedInstaller.tgz
-
-# http://datakurre.pandala.org/2012/09/speed-up-your-plone-add-on-tests-on.html
-[install]
-recipe = collective.recipe.cmd
-on_install = true
-cmds = tar jxf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
+# Don't try to do this smart optimization anymore as we are not running on rtd.org
+#[download]
+#recipe = hexagonit.recipe.download
+#url = https://launchpad.net/plone/4.2/4.2.1/+download/Plone-4.2.1-UnifiedInstaller.tgz
+#
+## http://datakurre.pandala.org/2012/09/speed-up-your-plone-add-on-tests-on.html
+#[install]
+#recipe = collective.recipe.cmd
+#on_install = true
+#cmds = tar jxf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
 
 #
 # We need to list all packages here which are referred by Sphinx's autodoc directive,
