added server alias collective-docs

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -3,6 +3,7 @@
 #
 # This file is normally included from the Apache HTTPD setup.
 
+ServerAlias collective-docs.plone.org
 DocumentRoot /var/www/developer.plone.org/var/public_html
 ServerAdmin admins@plone.org
 <Directory /var/www/developer.plone.org/var/public_html>
