--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -7,7 +7,7 @@ ServerAlias collective-docs.plone.org
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^collective-docs.plone.org
 RewriteRule ^(.*)$ http://developer.plone.org$1 [R=permanent,L]
-
+RewriteRule ^/en/latest(.*)$ http://developer.plone.org$1 [R=permanent,L]
 
 DocumentRoot /var/www/developer.plone.org/var/public_html
 ServerAdmin admins@plone.org
