--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -3,10 +3,17 @@
 #
 # This file is normally included from the Apache HTTPD setup.
 ServerAlias collective-docs.plone.org
+ServerAlias api.plone.org
 
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^collective-docs.plone.org
 RewriteRule ^(.*)$ http://developer.plone.org$1 [R=permanent,L]
+
+RewriteCond %{HTTP_HOST} ^api.plone.org
+RewriteRule ^.*$ http://developer.plone.org/reference_manuals/external/plone.api/ [R=permanent,L]
+
+
+
 RewriteRule ^/en/latest(.*)$ http://developer.plone.org$1 [R=permanent,L]
 
 DocumentRoot /var/www/developer.plone.org/var/public_html
