--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - python bootstrap.py
   - bin/buildout
 
-script: bin/sphinx-build -b html source build/html
+script: make html
 
 notifications:
   irc:
