--- a/buildout.cfg
+++ b/buildout.cfg
@@ -90,6 +90,7 @@ zc.recipe.egg = 1.2.0
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.3
 docutils = 0.9.1
+Docutils = 0.9.1
 
 # Make sure you use public Github URL here!
 [sources]
