Added reference to sphinx contributors plug-in, not used yet

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -81,6 +81,8 @@ eggs =
     collective.sphinx.autoatschema
     Products.CMFPlone
     plone.api
+    sphinxcontrib.contributors
+    ipdb
 
 [versions]
 roadrunner = 0.2.3.1
@@ -98,5 +100,5 @@ Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
 plone.api = git git://github.com/plone/plone.api.git
 tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
 ploneorg.admin = git git://github.com/plone/ploneorg.admin.git egg=false
-
+sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
 
