Auto checkout sphinxcontrib.contributors

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -49,6 +49,7 @@ auto-checkout =
     Products.TinyMCE
     tutorials.todoapp
     ploneorg.admin
+    sphinxcontrib.contributors
 
 allow-picked-versions = true
 
