--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ parts =
     download
     install
     sphinx
+    funnelweb
 
 allow-hosts =
     *.plone.org
@@ -22,11 +23,10 @@ extensions =
   mr.developer
   buildout.dumppickedversions
 
-eggs-directory = buildout-cache/eggs
-download-cache = buildout-cache/downloads
-
 extends =
     https://raw.github.com/plone/buildout.coredev/4.2/sources.cfg
+    http://dist.plone.org/release/4.2-latest/versions.cfg
+
 
 dump-picked-versions-file = picked.cfg
 sources = sources
@@ -50,6 +50,17 @@ auto-checkout =
     Products.TinyMCE
     tutorials.todoapp
 
+# these can be removed after upcoming release
+    transmogrify.webcrawler
+    transmogrify.htmlcontentextractor
+    transmogrify.ploneremote
+    transmogrify.htmltesting
+    transmogrify.siteanalyser
+    transmogrify.command
+    funnelweb
+    mr.migrator
+
+
 allow-picked-versions = true
 
 [download]
@@ -60,7 +71,12 @@ url = https://launchpad.net/plone/4.2/4.2.1/+download/Plone-4.2.1-UnifiedInstall
 [install]
 recipe = collective.recipe.cmd
 on_install = true
-cmds = tar jxf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
+cmds =
+  tar jxf ${download:location}/Plone-4.2.1-UnifiedInstaller/packages/buildout-cache.tar.bz2 1>/dev/null
+  cp -R buildout-cache/eggs ${buildout:eggs-directory}
+  cp -R buildout-cache/downloads ${buildout:download-cache}
+  rm -r buildout-cache/eggs buildout-cache/downloads
+
 
 [sphinx]
 recipe = collective.recipe.sphinxbuilder
@@ -75,19 +91,41 @@ eggs =
   collective.sphinx.includedoc
   collective.sphinx.autoatschema
 
+#
+# To run funnelweb use $ bin/funnelweb --pipeline=pandoc.cfg
+# or create another pipeline to use
+#
+
+[funnelweb]
+recipe = zc.recipe.egg
+eggs =
+  funnelweb
+  transmogrify.command
+
 
 [versions]
 roadrunner = 0.2.3.1
 zc.recipe.egg = 1.2.0
-Products.CMFPlone = 4.2.1
+#Products.CMFPlone = 4.2.1
 
 # Some pindowns to make sure Sphinx + dependencies don't go havoc
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.3
+docutils=0.9.1
 
 [sources]
 Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
 plone.api = git git://github.com/plone/plone.api.git
 tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
+
+# funnelweb
+transmogrify.webcrawler = git git@github.com:djay/transmogrify.webcrawler.git
+transmogrify.htmlcontentextractor = git git@github.com:djay/transmogrify.htmlcontentextractor.git
+transmogrify.ploneremote = git git@github.com:djay/transmogrify.ploneremote.git
+transmogrify.htmltesting = git git@github.com:djay/transmogrify.htmltesting.git
+transmogrify.siteanalyser = git git@github.com:djay/transmogrify.siteanalyser.git
+transmogrify.command = git git@github.com:djay/transmogrify.command.git
+funnelweb = git git@github.com:collective/funnelweb.git
+mr.migrator = git git@github.com:collective/mr.migrator.git
 
 
